[gd_scene load_steps=4 format=3 uid="uid://b8jwmf3r4p8ds"]

[ext_resource type="Script" uid="uid://ctoh87kg84ubj" path="res://dna.gd" id="1_14oti"]
[ext_resource type="PackedScene" uid="uid://by2b4k7nbbfa8" path="res://junior.tscn" id="2_k673e"]
[ext_resource type="Texture2D" uid="uid://c4xjoxs8nrubj" path="res://jr_128.png" id="3_syva3"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_14oti")

[node name="DisplayCanvas" type="Node2D" parent="."]

[node name="GenerationLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 4.0
offset_right = 102.0
offset_bottom = 27.0
text = "Generation: "

[node name="PopulationLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 32.0
offset_right = 95.0
offset_bottom = 55.0
text = "Population:"

[node name="BestFitnessLabel" type="Label" parent="."]
offset_left = 38.0
offset_top = 118.0
offset_right = 132.0
offset_bottom = 141.0
text = "best fitness:"

[node name="MutationLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 59.0
offset_right = 99.0
offset_bottom = 82.0
text = "mutation:"

[node name="BestPanel" type="Panel" parent="."]
offset_left = 59.0
offset_top = 153.0
offset_right = 474.0
offset_bottom = 543.0

[node name="Panel" type="Panel" parent="."]
offset_left = 510.0
offset_top = 148.0
offset_right = 910.0
offset_bottom = 536.0

[node name="SubViewportContainer_BestFit" type="SubViewportContainer" parent="."]
offset_left = 102.0
offset_top = 181.0
offset_right = 448.0
offset_bottom = 520.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_BestFit"]
disable_3d = true
handle_input_locally = false
size = Vector2i(346, 339)
size_2d_override = Vector2i(128, 128)
render_target_update_mode = 4

[node name="BestCandidateRenderer" parent="SubViewportContainer_BestFit/SubViewport" instance=ExtResource("2_k673e")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 540.0
offset_top = 180.0
offset_right = 886.0
offset_bottom = 519.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(346, 339)
size_2d_override = Vector2i(128, 128)
render_target_update_mode = 4

[node name="CandidateRenderer" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_k673e")]

[node name="TargetImage" type="Sprite2D" parent="."]
position = Vector2(509, 56)
scale = Vector2(0.692871, 0.662896)
texture = ExtResource("3_syva3")

[node name="best" type="Label" parent="."]
offset_left = 299.0
offset_top = 125.0
offset_right = 339.0
offset_bottom = 148.0
text = "BEST"

[node name="current" type="Label" parent="."]
offset_left = 634.0
offset_top = 128.0
offset_right = 694.0
offset_bottom = 151.0
text = "Current"

[node name="pop" type="Label" parent="."]
offset_left = 777.0
offset_top = -3.0
offset_right = 916.0
offset_bottom = 20.0
text = "Population Debug"

[node name="population" type="Node2D" parent="."]
position = Vector2(737, 2)

[node name="target" type="Label" parent="."]
offset_left = 369.0
offset_top = 6.0
offset_right = 454.0
offset_bottom = 29.0
text = "Target:"

[node name="BestGenerationLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 86.0
offset_right = 189.0
offset_bottom = 109.0
text = "best generation"
